--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.12.0",
-    "express": "^4.12.2"
+    "express": "^4.12.2",
+    "mongoose": "^3.8.25"
   },
   "devDependencies": {},
   "scripts": {
