--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.12.0",
+    "ejs": "^2.3.1",
     "express": "^4.12.2",
     "mongoose": "^3.8.25"
   },
